--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-    <head></head>
+    <head>
+        <title></title>
+    </head>
     <body>
-        
+        <h1>Test</h1>
     </body>
 </html>
